--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,12 +1,14 @@
 <div class="event">
   <% if eventEnded(@event.id) %>
-    <p class="alert">This event has ended.<br>Average Rating: <%= getAvgStarRating(@event.id) %></p>
+    <p class="summary">This event has ended.<br>Average Rating: <%= getAvgStarRating(@event.id) %></p>
   <% end %>
   <h2><%= @event.name %></h2>
 
   <div class="col-xs-12 col-md-6">
     <% if @event.avatar.attached? %>
-      <image src="<%= url_for(@event.avatar) %>">
+      <img src="<%= url_for(@event.avatar) %>">
+    <% else %>
+      <%= image_tag("eph.png") %>
     <% end %>
   </div>
 
@@ -18,7 +20,7 @@
   </div>
 
   <!-- show event buttons -->
-  <% if @b2 %>
+  <% if @b1 || !eventEnded(@event.id) %>
     <button class="btn1" onclick="window.location.href='<%= edit_event_path(@event) %>'">
         <span class="circle" aria-hidden="true">
         <span class="icon arrow"></span>
