--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,6 @@
 //maps css
 @import "maps";
 
-@import "notifications";
-
 html, body {
     margin:0;
     padding:0;
@@ -78,24 +76,30 @@ h1, h2, h3 {
 }
 
 //small profile/event view
-.user-sm, .event-sm {
-    position:relative;
-    display:block;
-    height:300px;
+.user-sm, .event-sm, .review-sm, .notification-sm, .event-md {
+    border:1px solid #efefef;
+    margin-bottom:10px;
     a {
         text-decoration:none;
     }
     p {
         text-align:center;
-        color:#000;
+        color:#7c8690;
         font-weight:bold;
         
         &.name {
-            color:blue;
+            color:#1969b0;
+        }
+        &.red {
+            color:#ef3739;
+        }
+        &.green {
+            color:green;
         }
     }
     img {
-        max-width:150px;
+        max-width:100%;
+        max-height:200px;
         margin:auto;
     }
 }
