--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,29 +1,13 @@
 <h1>Notifications</h1>
 
-<% if @notifications.count == 0 %>
+<% if @ns.count == 0 %>
   <p>There are no notifications to display</p>
 <% else %>
   <%= link_to 'Delete All Notifications', '/notifications/' + current_user.id.to_s + "/9", data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-  <% @notifications.each do |n| %>
-    <% @ntype = n.notification_type %>
-    <div class="notification">
-      <h4><%= n.title %></h4>
-      <p><%= n.desc %></p>
-      <p class="buttons">
-        <% if @ntype == 1 || @ntype == 2 %>
-          <%= link_to 'User', "/users/" + n.sender_id.to_s, class: "btn btn-info" %>
-        <% end %>
-        <% if @ntype == 3 || @ntype == 4 %>
-          <%= link_to 'Event', "/events/" + n.sender_id.to_s, class: "btn btn-info" %>
-        <% end %>
-        <% if @ntype == 1 || @ntype == 3 %>
-          <%= link_to 'Accept', '/notifications/' + n.id.to_s + '/' + @ntype.to_s, class: "btn btn-success" %>
-        <% end %>
-        <%= link_to 'Delete', n, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-        <% if @ntype == 3 || @ntype == 4 %>
-          <%= link_to 'Delete all notifications for this event', '/notifications/' + n.sender_id.to_s + "/8", data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-        <% end %>
-      </p>
-    </div>
+  <div class="clear"></div>
+  <% @ns.each do |n| %>
+    <%= getNotificationSm(n) %>
   <% end %>
 <% end %>
+<div class="clear"></div>
+
