--- a/app/views/profiles/profile.html.erb
+++ b/app/views/profiles/profile.html.erb
@@ -36,57 +36,12 @@
         <% if @events.count == 0 %>
             <p>This user has not created any upcoming events.</p>
         <% else %>
-            <table class="table events">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Date</th>
-                        <th>Time</th>
-                        <th>Image</th>
-                        <th>Public</th>
-                        <th colspan="<%= @b2?3:1 %>"></th>
-                    </tr>
-                </thead>
-            
-                <tbody>
-                    <% @events.each do |event| %>
-                        <tr>
-                            <td><%= event.name %></td>
-                            <td><%= event.description %></td>
-                            <td><%= event.date %></td>
-                            <td><%= event.time.strftime("%I:%M %p") %></td>
-                            <td>
-                                <% if event.avatar.attached? %>
-                                    <image src="<%= url_for(event.avatar) %>">
-                                <% end %>
-                            </td>
-                            <td class="toggle"><%= !event.private ? image_tag("tick.png") : image_tag("red-x.png") %></td>
-                            <td>
-                                <button class="btn1" onclick="window.location.href='/events/<%= event.id %>'">
-                                    <span class="circle" aria-hidden="true">
-                                    <span class="icon arrow"></span>
-                                    </span>
-                                    <span class="button-text">View</span>
-                                </button>
-                            </td>
-                            <% if @b2 %>
-                                <td>
-                                    <button class="btn1" onclick="window.location.href='<%= edit_event_path(event) %>'">
-                                        <span class="circle" aria-hidden="true">
-                                        <span class="icon arrow"></span>
-                                        </span>
-                                        <span class="button-text">Edit</span>
-                                    </button>
-                                </td>
-                                <td><%= link_to 'Delete', event, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %></td>
-                            <% end %>
-                        </tr>
-                    <% end %>
-                </tbody>
-            </table>
+            <% @events.each do |e| %>
+                <%= getEventMd(e, @creator.id) %>
+            <% end %>
         <% end %>
     </div>
+    <div class="clear"></div>
 
     <% if !(current_user.id == @creator.id)
         @userEvents = getUnfinishedEvents(current_user.id) %>
@@ -95,69 +50,13 @@
             <% if @userEvents.count == 0 %>
                 <p>You have not created any upcoming events.</p>
             <% else %>
-                <table class="table events">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Date</th>
-                            <th>Time</th>
-                            <th>Image</th>
-                            <th colspan="4"></th>
-                        </tr>
-                    </thead>
-                
-                    <tbody>
-                        <% @userEvents.each do |event| %>
-                            <tr>
-                                <td><%= event.name %></td>
-                                <td><%= event.description %></td>
-                                <td><%= event.date %></td>
-                                <td><%= event.time.strftime("%I:%M %p") %></td>
-                                <td>
-                                    <% if event.avatar.attached? %>
-                                        <image src="<%= url_for(event.avatar) %>">
-                                    <% end %>
-                                </td>
-                                <td>
-                                    <button class="btn1" onclick="window.location.href='/events/<%= event.id %>'">
-                                        <span class="circle" aria-hidden="true">
-                                        <span class="icon arrow"></span>
-                                        </span>
-                                        <span class="button-text">View</span>
-                                    </button>
-                                </td>
-                                <td>
-                                    <button class="btn1" onclick="window.location.href='<%= edit_event_path(event) %>'">
-                                        <span class="circle" aria-hidden="true">
-                                        <span class="icon arrow"></span>
-                                        </span>
-                                        <span class="button-text">Edit</span>
-                                    </button>
-                                </td>
-                                <td><%= link_to 'Delete', event, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %></td>
-                                <td>
-                                    <% if isInvited(event.id, @creator.id) %>
-                                        <p>This user has been invited.</p>
-                                    <% elsif isAttending(event.id, @creator.id) %>
-                                        <p>This user is attending.</p>
-                                    <% else %>
-                                        <button class="btn1" onclick="window.location.href='/events/<%= event.id %>/<%= @creator.id %>/1'">
-                                            <span class="circle" aria-hidden="true">
-                                            <span class="icon arrow"></span>
-                                            </span>
-                                            <span class="button-text">Invite User</span>
-                                        </button>
-                                    <% end %>
-                                </td>
-                            </tr>
-                        <% end %>
-                    </tbody>
-                </table>
+                <% @userEvents.each do |e| %>
+                    <%= getEventMd(e, @creator.id) %>
+                <% end %>
             <% end %>
         </div>
-    
     <% end %>
+    <div class="clear"></div>
     
     <% if @b2 %>
         <td>
