improved views for events
- added featured past events to homepage
- getEventSm moved to events helper
- getFriendSm moved to friends helper
- improved featured logic
- events/myevents changed to cards instead of tables

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,6 +90,9 @@ h1, h2, h3 {
         &.name {
             color:#1969b0;
         }
+        &.image {
+            height:200px;
+        }
         &.red {
             color:#ef3739;
         }
