--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,36 +1,4 @@
-<div class="event">
-  <% if eventEnded(@event.id) %>
-    <p class="summary">This event has ended.<br>Average Rating: <%= getAvgStarRating(@event.id) %></p>
-  <% end %>
-  <h2><%= @event.name %></h2>
-
-  <div class="col-xs-12 col-md-6">
-    <% if @event.avatar.attached? %>
-      <img src="<%= url_for(@event.avatar) %>">
-    <% else %>
-      <%= image_tag("eph.png") %>
-    <% end %>
-  </div>
-
-  <div class="col-xs-12 col-md-6">
-    <p><%= @event.description %></p>
-    <p><%= @event.date %> <%= @event.time.strftime("%I:%M %p") %></p>
-    <p>Public: <%= !@event.private ? "Yes" : "No" %></p>
-    <p>Organised By: <%= link_to @name, '/users/' + @event.user_id.to_s %></p>
-  </div>
-
-  <!-- show event buttons -->
-  <% if @b1 || !eventEnded(@event.id) %>
-    <a class="btn btn-warning" href="<%= edit_event_path(@event) %>">Edit</a>
-    <%= link_to 'Delete', @event, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %>
-  <% end %>
-  <button class="btn1" onclick="window.location.href='javascript: history.go(-1)'">
-      <span class="circle" aria-hidden="true">
-      <span class="icon arrow left"></span>
-      </span>
-      <span class="button-text">Back</span>
-  </button>
-</div>
+<%= getEventL(@event.id) %>
 
 <!-- show attending users -->
 <h2><%= eventEnded(@event.id) ? "Attended" : "Attending" %>: <span class="count"><%= @attending.count %></span></h2>
@@ -121,5 +89,4 @@
   <% if @isi && isAttending(@event.id, current_user.id) && !hasReviewed(current_user.id, @event.id) %>
     <%= render 'rform', review: @review %>
   <% end %>
-
 <% end %>
