--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,6 +1,9 @@
 #map {
-    width:400px;
-    height:300px;
+    position:absolute;
+    top:100px;
+    bottom:130px;
+    left:10%;
+    width:80%;
 }
 
 .ui-button {
