--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,7 @@
+
 <h1>About</h1>
+<div class="clear"></div>
 <div id='map'></div>
-<script>
-mapboxgl.accessToken = 'pk.eyJ1Ijoidnl2eCIsImEiOiJja2hvNHpoNWMwdzY5MnBxcXVkZW1ldG5sIn0.H34EuAUYbhKcNbvq2wRnYw';
-var map = new mapboxgl.Map({
-container: 'map',
-style: 'mapbox://styles/mapbox/streets-v11', // stylesheet location
-center: [-74.5, 40], // starting position [lng, lat]
-zoom: 9 // starting zoom
-});
-</script>
+<a href='#' id='geolocate' class='ui-button'>Find me</a>
+<%= javascript_pack_tag 'geolocate' %>
+<div class="clear"></div>
