--- a/app/views/admin_pages/admin.html.erb
+++ b/app/views/admin_pages/admin.html.erb
@@ -23,6 +23,7 @@
         <%= link_to 'All Attendings', attendings_path, :role=>"button", :class => "btn btn-info mb-2" %><br>
         <%= link_to 'All Notifications', notifications_path, :role=>"button", :class => "btn btn-info mb-2" %><br>
         <%= link_to 'All Profiles', profiles_path, :role=>"button", :class => "btn btn-info mb-2" %><br>
+        <%= link_to 'All Orders', "/orders/all", :role=>"button", :class => "btn btn-info mb-2" %><br>
       </td>
 
       <td>
