--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "reset";
 
-//@import "bootstrap-sprockets";
+@import "bootstrap-sprockets";
 @import "bootstrap";
 
 //navbar (header for all pages) code
@@ -17,6 +17,8 @@
 
 //orders css
 @import "orders";
+
+@import "carousel";
 
 html, body {
     margin:0;
@@ -74,7 +76,7 @@ h1, h2, h3 {
 }
 
 //view cards
-.user-sm, .event-sm, .review-sm, .notification-sm, .event-md, .profile-l, .event-l {
+.user-sm, .event-sm, .review-sm, .comment-sm, .notification-sm, .event-md, .profile-l, .event-l {
     border:1px solid #efefef;
     margin-bottom:10px;
     padding:10px;
@@ -132,135 +134,4 @@ h1, h2, h3 {
 //bootstrap buttons
 a.btn, button {
     margin:5px;
-}
-
-//new buttons
-@import url('https://fonts.googleapis.com/css?family=Mukta:700');
-$bg: #f3f8fa;
-$white: #fff;
-$black: #282936;
-@mixin transition($property: all,
-$duration: 0.45s,
-$ease: cubic-bezier(0.65,
-0,
-.076,
-1)) {
-    transition: $property $duration $ease;
-}
-
-* {
-    box-sizing: border-box;
-    &::before,
-    &::after {
-        box-sizing: border-box;
-    }
-}
-
-button {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    outline: none;
-    border: 0;
-    vertical-align: middle;
-    text-decoration: none;
-    background: transparent;
-    padding: 0;
-    font-size: 1rem;
-    font-family: 'Mukta', sans-serif;
-    &.btn1 {
-        width: 12rem;
-        height: auto;
-        .circle {
-            @include transition(all,
-            0.45s,
-            cubic-bezier(0.65,
-            0,
-            .076,
-            1));
-            position: relative;
-            display: block;
-            margin: 0;
-            width: 3rem;
-            height: 3rem;
-            background: $black;
-            border-radius: 1.625rem;
-            .icon {
-                @include transition(all,
-                0.45s,
-                cubic-bezier(0.65,
-                0,
-                .076,
-                1));
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                margin: auto;
-                background: $white;
-                &.arrow {
-                    @include transition(all,
-                    0.45s,
-                    cubic-bezier(0.65,
-                    0,
-                    .076,
-                    1));
-                    left: 0.625rem;
-                    width: 1.125rem;
-                    height: 0.125rem;
-                    background: none;
-                    &::before {
-                        position: absolute;
-                        content: '';
-                        top: -0.25rem;
-                        right: 0.0625rem;
-                        width: 0.625rem;
-                        height: 0.625rem;
-                        border-top: 0.125rem solid #fff;
-                        border-right: 0.125rem solid #fff;
-                        transform: rotate(45deg);
-                    }
-                &.left {
-                    left: 0.875rem;
-                    &::before {
-                        transform: rotate(225deg);
-                        }
-                    }
-                }
-            }
-        }
-        .button-text {
-            @include transition(all,
-            0.45s,
-            cubic-bezier(0.65,
-            0,
-            .076,
-            1));
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            padding: 0.75rem 0;
-            margin: 0 0 0 1.85rem;
-            color: $black;
-            font-weight: 700;
-            line-height: 1.6;
-            text-align: center;
-            text-transform: uppercase;
-        }
-    }
-    &:hover {
-        .circle {
-            width: 100%;
-            .icon {
-                &.arrow {
-                    background: $white;
-                    transform: translate(1rem, 0);
-                }
-            }
-        }
-        .button-text {
-            color: $white;
-        }
-    }
 }
