Added code for no reviews yet

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,19 +8,23 @@
 <!-- show recent reviews in slider -->
 <div class="pic-ctn featured col-xs-12 col-md-6">
     <h2>Recent Reviews</h2>
-    <% @rs.each do |r| %>
-        <div class="review-sm">
-            <% if showPic(current_user.id, r.user_id) %>
-                <img src="<%= url_for(User.find_by(id: r.user_id).avatar) %>">
-            <% else %>
-                <%= image_tag("ph.png") %>
-            <% end %>
-            <a href="/users/<%= r.user_id %>">
-            <p class="name"><%= getName(current_user.id, r.user_id) %></p></a>
-            <a href="/events/<%= r.event_id %>"><p>Review for <strong><%= Event.find_by(id: r.event_id).name %></strong></p></a>
-            <p><%= reviewRating(r.rating) %></p>
-            <p><%= r.text %></p>
-        </div>
+    <% if @rs.count == 0 %>
+        <p>There are no reviews to display.</p>
+    <% else %>
+        <% @rs.each do |r| %>
+            <div class="review-sm">
+                <% if showPic(current_user.id, r.user_id) %>
+                    <img src="<%= url_for(User.find_by(id: r.user_id).avatar) %>">
+                <% else %>
+                    <%= image_tag("ph.png") %>
+                <% end %>
+                <a href="/users/<%= r.user_id %>">
+                <p class="name"><%= getName(current_user.id, r.user_id) %></p></a>
+                <a href="/events/<%= r.event_id %>"><p>Review for <strong><%= Event.find_by(id: r.event_id).name %></strong></p></a>
+                <p><%= reviewRating(r.rating) %></p>
+                <p><%= r.text %></p>
+            </div>
+        <% end %>
     <% end %>
 </div>
 <div class="clear"></div>
