--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -19,6 +19,11 @@ form.form {
         padding: 0 30px 0 53px;
     }
 
+    input[type="file"] {
+        background:transparent;
+        padding:10px;
+    }
+
     textarea {
         height:150px;
     }
