search, pagination, fixes
- fixed remaining images
- added search events/friends
- paginated profile events
- added getPic/getName methods

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,12 @@ h1, h2, h3 {
     text-align:center;
 }
 
+h1 {
+    font-family:onyx;
+    font-size:48px;
+    color:#030;
+}
+
 .comment, .review {
     width:650px;
     margin:auto;
