--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,24 @@
-<a class="btn btn-success" href="/events/new">Create New Event</a>
-<div class="clear"></div>
+<div class="form-wrapper">
+  <%= form_tag(events_path, method: :get, class: "form") do %>
+    <div class="field">
+      <%= text_field_tag(:search, params[:search]) %>
+    </div>
+    <div class="actions">
+      <%= submit_tag ("Search") %>
+    </div>
+  <% end %>
+</div>
+
+<% if params[:search] != nil %>
+    <p>Your search for "<%= params[:search] %>" yielded <%= @events.count %> result<%= @events.count != 1 ? "s" : "" %>.</p>
+<% end %>
 
 <% @events.each do |event| %>
   <%= getEventMd(event.id, nil) %>
 <% end %>
 <%= will_paginate @events %>
 
+<div class="clear"></div>
+
+<a class="btn btn-success" href="/events/new">Create New Event</a>
 <div class="clear"></div>
