--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,4 +1,20 @@
 <h1>Friends</h1>
+
+<div class="form-wrapper">
+  <%= form_tag(friends_path, method: :get, class: "form") do %>
+    <div class="field">
+      <%= text_field_tag(:search, params[:search]) %>
+    </div>
+    <div class="actions">
+      <%= submit_tag ("Search") %>
+    </div>
+  <% end %>
+</div>
+
+<% if params[:search] != nil %>
+    <p>Your search for "<%= params[:search] %>" yielded <%= @friends.count %> friend<%= @friends.count != 1 ? "s" : "" %>.</p>
+<% end %>
+
 <% if @friends.count == 0 %>
   <p>You have not made any friends here yet.</p>
 <% else %>
